--- a/Views/Jokes/ShowSearchForm.cshtml
+++ b/Views/Jokes/ShowSearchForm.cshtml
@@ -1,21 +1,21 @@
-﻿<h4>Search for a joke</h4>
+﻿<div class="text-center">
+    <h4>Search for a joke</h4>
+</div>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-6">
         <form asp-action="ShowSearchResults">
-
             <div class="form-group">
                 <label for="SearchPhrase" class="control-label"></label>
                 <input name="SearchPhrase" class="form-control" />
-
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3 text-center">
                 <input type="submit" value="Search" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div> 
+</div>
 
-<div>
+<div class="text-center mt-3">
     <a asp-action="Index">Back to List</a>
 </div>
