--- a/wwwroot/css/dark-theme.css
+++ b/wwwroot/css/dark-theme.css
@@ -8,10 +8,10 @@ nav {
 }
 
 .btn {
-    background-color: #6200ee;
+    background-color: #333333;
     color: white;
 }
 
 a {
-    color: #bb86fc;
+    color: #333333;
 }
