--- a/wwwroot/css/light-theme.css
+++ b/wwwroot/css/light-theme.css
@@ -9,10 +9,10 @@ nav {
 }
 
 .btn {
-    background-color: #6200ee;
-    color: white;
+    background-color: #ddd;
+    color: black;
 }
 
 a {
-    color: #6200ee;
+    color: #ffffff;
 }
