--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,15 +21,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Jokes" asp-action="Index">Jokes</a>
+                            <a class="nav-link" asp-area="" asp-controller="Jokes" asp-action="Index">Jokes</a>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Jokes" asp-action="ShowSearchForm">Search</a>
+                            <a class="nav-link" asp-area="" asp-controller="Jokes" asp-action="ShowSearchForm">Search</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -49,19 +49,20 @@
             &copy; 2024 - DemoWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script>
+    
+        <script>
                 // Завантаження теми при завантаженні сторінки
                 document.addEventListener('DOMContentLoaded', function () {
                     var savedTheme = localStorage.getItem('theme');
                     var themeStylesheet = document.getElementById('theme-stylesheet');
 
-                    if (savedTheme === 'dark') {
+                    if (savedTheme === 'dark') 
+                    {
                         themeStylesheet.href = '/css/dark-theme.css';
                         document.body.classList.add('dark-theme');
-                    } else {
+                    }
+                    else 
+                    {
                         themeStylesheet.href = '/css/light-theme.css';
                         document.body.classList.add('light-theme');
                     }
@@ -71,14 +72,14 @@
             var themeStylesheet = document.getElementById('theme-stylesheet');
             var currentTheme = themeStylesheet.href.includes('dark-theme') ? 'dark' : 'light';
 
-            if (currentTheme === 'light') 
+            if (currentTheme === 'light')
             {
                 themeStylesheet.href = '/css/dark-theme.css';
                 document.body.classList.add('dark-theme');
                 document.body.classList.remove('light-theme');
                 localStorage.setItem('theme', 'dark');
-            } 
-            else 
+            }
+            else
             {
                 themeStylesheet.href = '/css/light-theme.css';
                 document.body.classList.add('light-theme');
@@ -86,8 +87,13 @@
                 localStorage.setItem('theme', 'light');
             }
         });
-    </script>
+        </script>
+    
 
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+   
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
