--- a/wwwroot/css/dark-theme.css
+++ b/wwwroot/css/dark-theme.css
@@ -1,59 +1,17 @@
-﻿body {
-    background-color: #333333;
+﻿body.dark-theme {
+    background-color: #121212;
     color: #ffffff;
 }
 
-/* Навігаційні посилання */
-.navbar-dark .navbar-nav .nav-link {
-    background: transparent;
-    color: #ffffff;
-    outline: none; /* Вимикає обводку */
-    box-shadow: none; /* Вимикає тіні */
-    border: none; /* Вимикає границі */
-}
-
-    .navbar-dark .navbar-nav .nav-link:focus,
-    .navbar-dark .navbar-nav .nav-link:active {
-        outline: none; /* Вимикає обводку при фокусуванні */
-        box-shadow: none; /* Прибирає будь-які тіні */
-        border: none; /* Вимикає рамку */
+    body.dark-theme .navbar-dark .navbar-nav .nav-link {
+        color: #ffffff;
     }
 
-    /* Ховер для навігаційних посилань */
-    .navbar-dark .navbar-nav .nav-link:hover {
-        color: #bb86fc; /* Невелика зміна кольору при ховері */
+    body.dark-theme .btn-secondary {
+        background-color: #333333;
+        color: #ffffff;
     }
 
-/* Кнопка Secondary */
-.btn-secondary {
-    background-color: #333333;
-    color: white;
-    outline: none;
-    box-shadow: none;
-}
-
-/* Загальні стилі для кнопок */
-.btn {
-    background-color: #333333;
-    color: white;
-    outline: none; /* Вимикає обводку */
-    box-shadow: none; /* Вимикає тіні */
-    border: none; /* Вимикає рамку */
-}
-
-    .btn:focus, .btn:active {
-        outline: none; /* Вимикає обводку при фокусуванні */
-        box-shadow: none; /* Прибирає тіні */
-        border: none; /* Вимикає рамку */
-    }
-
-/* Стилі для посилань */
-a {
-    color: #ffffff;
-    text-decoration: none; /* Прибирає підкреслення */
-}
-
-    a:focus, a:active {
-        outline: none; /* Вимикає обводку при фокусуванні */
-        box-shadow: none; /* Прибирає тіні */
+    body.dark-theme a {
+        color: #bb86fc;
     }
