--- a/wwwroot/css/light-theme.css
+++ b/wwwroot/css/light-theme.css
@@ -1,31 +1,17 @@
-﻿body {
-    background-color: #ffffff;
-    color: #000000
-}
-
-.navbar-light .navbar-nav .nav-link {
-    background: transparent;
-    color: #000000;
-    outline: none;
-    box-shadow: none;
-    border: none;
-}
-
-.navbar-light .navbar-nav .nav-link:hover {
-    color: #000000;
-}
-
-.btn-secondary {
+﻿body.light-theme {
     background-color: #ffffff;
     color: #000000;
 }
 
-.btn {
-    background-color: #ffffff;
-    color: black;
-}
+    body.light-theme .navbar-light .navbar-nav .nav-link {
+        color: #000000;
+    }
 
-/*Нижня частина*/
-a {
-    color: #d06060;
-}
+    body.light-theme .btn-secondary {
+        background-color: #f8f9fa;
+        color: #000000;
+    }
+
+    body.light-theme a {
+        color: #6200ee;
+    }
