--- a/wwwroot/css/dark-theme.css
+++ b/wwwroot/css/dark-theme.css
@@ -1,17 +1,26 @@
-﻿body.dark-theme {
-    background-color: #121212;
-    color: #ffffff;
+﻿/* dark-theme.css */
+body {
+    background-color: #333333;
+    color: #ffffff
 }
 
-    body.dark-theme .navbar-dark .navbar-nav .nav-link {
-        color: #ffffff;
-    }
+nav {
+    background-color: white;
+    color :wheat
+}
 
-    body.dark-theme .btn-secondary {
-        background-color: #333333;
-        color: #ffffff;
-    }
+.btn {
+    background-color: #ddd;
+    color: white;
+}
 
-    body.dark-theme a {
-        color: #bb86fc;
-    }
+a {
+    color: #ffffffff;
+}
+td 
+{
+    color :white
+}
+th {
+    color: white
+}
